--- a/src/components/Task/task.module.scss
+++ b/src/components/Task/task.module.scss
@@ -84,7 +84,7 @@
                 }
 
                 &.highUrgency {
-                    color: $clrError;
+                    color: $clrError-100;
                 }
             }
         }
