--- a/src/components/TaskList/taskList.module.scss
+++ b/src/components/TaskList/taskList.module.scss
@@ -7,6 +7,11 @@
     overflow-y: auto;
     padding: 0 8px;
 
+    @media (max-width: $mobile) {
+        position: fixed;
+        top: 32px;
+    }
+
     -ms-overflow-style: none;
     scrollbar-width: none;
 
