--- a/src/pages/Homepage/homepage.module.scss
+++ b/src/pages/Homepage/homepage.module.scss
@@ -4,5 +4,5 @@
     width: 100%;
     height: 100vh;
     @include displayFlex(column, center, flex-start, 32px);
-
+    overscroll-behavior: none;
 }
