--- a/src/styles/_animations.scss
+++ b/src/styles/_animations.scss
@@ -1,6 +1,12 @@
 @keyframes slide-up {
-    0% { -webkit-transform: translateY(100%); }
-    100% { -webkit-transform: translateY(0); }
+    0% { 
+        opacity: 0;
+        -webkit-transform: translateY(100%); 
+    }
+    100% { 
+        opacity:1;
+        -webkit-transform: translateY(0); 
+    }
 }
 
 @keyframes slide-down {
